# CPackQtMacSimple

./: .gitignore  CMakeLists.txt
